Add external legal page feature

--- a/index.html
+++ b/index.html
@@ -171,7 +171,12 @@ layout: default
   </div>
   {% if site.data.organizers.group %}
     <p>
-      {{ site.data.info.name }} is organized by {{ site.data.organizers.group.name }}, whose legal documents can be viewed <a href="/legal">here</a>.
+      {{ site.data.info.name }} is organized by {{ site.data.organizers.group.name }}, whose legal documents can be viewed
+      {% if site.data.organizers.group.link %}
+        <a href="{{ site.data.organizers.group.link }}">here</a>.
+      {% else %}
+        <a href="/legal">here</a>.
+      {% endif %}
     </p>
   {% endif %}
   <p>
