--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@ layout: default
       {% for part in site.data.schedule %}
         <div class="item-large">
           <table>
+            {% if part[0] != '' %}
             <tr>
               <th colspan="2">
                 <h2>{{ part[0] }}</h2>
               </th>
             </tr>
+            {% endif %}
             {% for item in part[1] %}
               <tr>
                 <td>{{ item[0] }}</td>
@@ -82,7 +84,7 @@ layout: default
 {% endif %}
 <section>
   {% if site.data.faq %}
-    <h1>F.A.Q.</h1>
+    <h1 id="faq">F.A.Q.</h1>
     <div class="items-container">
       {% for item in site.data.faq %}
         <div class="item-large">
